// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When all button card variants has been rendered Expect Btn card 1 Rendered Successfully 1`] = `
[
  <div
    class="z-0"
    data-testid="btnCardOne"
  >
    <span
      class="z-[-5] relative duration-150 inline-block bg-[#BDBDBD] text-center px-[1.25rem] py-[0.625rem] text-md  text-white rounded-[0.25rem] !leading-normal"
    >
      <span
        class="absolute rounded-[0.25rem]"
        data-testid="dynamicStyleTestId"
        style="top: 0px; left: 0px; background: rgb(43, 115, 185); height: 65%; width: 100%; z-index: -1;"
      />
      <span
        class="z-10"
      >
        Grass
      </span>
    </span>
  </div>,
]
`;

exports[`When all button card variants has been rendered Expect Btn card 2 Rendered Successfully 1`] = `
[
  <div
    class="z-0"
    data-testid="btnCardTwo"
  >
    <span
      class="z-[-5] relative duration-150 inline-block bg-[#BDBDBD] text-center px-[1.25rem] text-base  text-white rounded-[0.25rem] !leading-normal"
    >
      <span
        class="absolute rounded-[0.25rem]"
        data-testid="dynamicStyleTestId"
        style="top: 0px; left: 0px; background: rgb(43, 115, 185); height: 50%; width: 100%; z-index: -1;"
      />
      <span
        class="z-10"
      >
        Grass
      </span>
    </span>
  </div>,
]
`;
